[tool.poetry]
name = "microblog"
version = "0.1.0"
description = "personal microblog site that will focus on data engineering technologies"
authors = ["Scott Saenz <scottrsaenz@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
aiosmtpd = "^1.4.5"
alembic = "^1.13.1"
atpublic = "^4.0"
attrs = "^23.2.0"
Babel = "^2.14.0"
blinker = "^1.7.0"
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
defusedxml = "^0.7.1"
dnspython = "^2.6.1"
elastic-transport = "^8.12.0"
elasticsearch8 = "^8.12.1"
email-validator = "^2.1.1"
flask-babel = "^4.0.0"
Flask-HTTPAuth = "^4.8.0"
Flask-Login = "^0.6.3"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^4.0.7"
Flask-Moment = "^1.0.5"
Flask-SQLAlchemy = "^3.1.1"
Flask-WTF = "^1.2.1"
greenlet = "^3.0.3"
gunicorn = "^21.2.0"
httpie = "^3.2.2"
idna = "^3.6"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.3"
langdetect = "^1.0.9"
Mako = "^1.3.2"
markdown-it-py = "^3.0.0"
MarkupSafe = "^2.1.5"
mdurl = "^0.1.2"
multidict = "^6.0.5"
packaging = "^24.0"
psycopg2-binary = "^2.9.9"
Pygments = "^2.17.2"
PyJWT = "^2.8.0"
PySocks = "^1.7.1"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
redis = "^5.0.3"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
rich = "^13.7.1"
rq = "^1.16.1"
setuptools = "^69.2.0"
six = "^1.16.0"
SQLAlchemy = "^2.0.29"
urllib3 = "^2.2.1"
Werkzeug = "^3.0.1"
WTForms = "^3.1.2"
elasticsearch = "^8.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
